# Win32-Window

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Window.cpp  Window.h
